tests/should_fail/match_string_on_int_value.nv
module fail
// String pattern on an int match — type mismatch
let n = 42
let r = match n {
    "hello" => "bad",
    _ => "ok",
}
